--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-vis": "^1.11.7",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -48,6 +49,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
+    "@types/react-dom": "^17.0.0",
+    "@types/react-vis": "^1.11.10"
   }
 }
