--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
     "@mui/styles": "^5.2.3",
+    "@mui/system": "^5.2.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -19,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-vis": "^1.11.7",
+    "tss-react": "^3.2.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
