--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@testing-library/user-event": "^12.1.10",
     "classnames": "^2.3.1",
     "csstype": "^3.0.10",
+    "luxon": "^2.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "react-vis": "^1.11.7",
     "tss-react": "^3.2.2",
@@ -50,6 +53,8 @@
   "devDependencies": {
     "@types/classnames": "^2.3.1",
     "@types/jest": "^26.0.15",
+    "@types/luxon": "^2.0.8",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
