--- a/package.json
+++ b/package.json
@@ -20,17 +20,15 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
-    "react-scripts": "4.0.3",
     "react-vis": "^1.11.7",
     "tss-react": "^3.2.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "serve": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -58,6 +56,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-vis": "^1.11.10"
+    "@types/react-vis": "^1.11.10",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "vite": "^2.7.11",
+    "vite-plugin-svgr": "^1.0.1",
+    "vite-react-jsx": "^1.1.2"
   }
 }
