--- a/package.json
+++ b/package.json
@@ -57,9 +57,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-vis": "^1.11.10",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@vitejs/plugin-react": "^1.1.4",
     "vite": "^2.7.11",
-    "vite-plugin-svgr": "^1.0.1",
-    "vite-react-jsx": "^1.1.2"
+    "vite-plugin-svgr": "^1.0.1"
   }
 }
